kubernetes/best-practices/require-run-as-non-root-user/require-run-as-non-root-user.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-run-as-non-root-user
  annotations:
    policies.kyverno.io/title: Require Run As Non-Root User
    policies.kyverno.io/category: Pod Security Standards
    policies.kyverno.io/severity: critical
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Containers must be required to run as non-root users. This policy ensures that the fields 
      spec.securityContext.runAsUser,
      spec.containers[*].securityContext.runAsUser, spec.initContainers[*].securityContext.runAsUser,
      and spec.ephemeralContainers[*].securityContext.runAsUser is either unset or
      set to a number greater than zero.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: run-as-non-root-user
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: >-
          Running the container as root user is not allowed.
        pattern:
          spec:
            =(securityContext):
              =(runAsUser): ">0"
            =(ephemeralContainers):
              - =(securityContext):
                  =(runAsUser): ">0"
            =(initContainers):
              - =(securityContext):
                  =(runAsUser): ">0"
            containers:
              - =(securityContext):
                  =(runAsUser): ">0"
